<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".activity.ProfileActivity"
    >
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="vertical"
        android:paddingBottom="16dp">

        <ImageView
            android:id="@+id/back_btnIV_AP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?selectableItemBackground"
            android:src="@drawable/back_btn_img2"
            android:layout_marginStart="@dimen/dim_25"
            android:layout_marginTop="@dimen/dim_28"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/circleImageView"
            android:layout_width="@dimen/dim_160"
            android:layout_height="@dimen/dim_160"
            android:layout_marginTop="@dimen/dim_45"
            android:src="@drawable/avatar"
            app:civ_border_color="@color/black"
            app:civ_border_width="2dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/dim_65"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/circleImageView">
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dim_38"
                android:layout_marginEnd="@dimen/dim_38"
                android:hint="@string/name"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/nameTIETPro"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_medium"
                    android:inputType="textPersonName"
                    android:focusable="false"
                    android:text="@string/nameOfUser" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dim_38"
                android:layout_marginEnd="@dimen/dim_38"
                android:layout_marginTop="@dimen/dim_10"
                android:hint="@string/email"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/emailTIETPro"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_medium"
                    android:inputType="textEmailAddress"
                    android:focusable="false"
                    android:text="@string/emailOfUser" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dim_38"
                android:layout_marginEnd="@dimen/dim_38"
                android:layout_marginTop="@dimen/dim_10"

                android:hint="@string/phone"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/phoneTIETPro"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_medium"
                    android:inputType="phone"
                    android:focusable="false"
                    android:text="@string/phoneOfUser" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dim_38"
                android:layout_marginEnd="@dimen/dim_38"
                android:hint="@string/address"
                android:layout_marginTop="@dimen/dim_10"

                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/addressTIETPro"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_medium"
                    android:inputType="textPostalAddress"
                    android:focusable="false"
                    android:text="@string/addressOfUser" />
            </com.google.android.material.textfield.TextInputLayout>
            <Button
                android:id="@+id/btnLogOut"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/logOut"
                android:textAllCaps="false"
                style="@style/Widget.Material3.Button.ElevatedButton"
                android:textColor="#fff"
                android:backgroundTint="#535252"
                android:layout_gravity="center"
                android:paddingStart="@dimen/dim_40"
                android:paddingEnd="@dimen/dim_40"
                android:paddingTop="@dimen/dim_12"
                android:paddingBottom="@dimen/dim_12"
                android:layout_marginTop="@dimen/dim_36"
                android:textSize="@dimen/font_size_18"/>


        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>