<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ViewItem"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/backBtn_IVVI"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/back_btn_img"
        android:padding="10dp"
        android:clickable="true"
        android:focusable="true"
        android:background="?selectableItemBackground"/>
    <ImageView
        android:id="@+id/itemImageIVVI"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:src="@drawable/shoe_image"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.7"
        android:padding="@dimen/dim_20"
        android:background="@drawable/linear_layout_border">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">
                <TextView
                    android:id="@+id/itemNameTVVI"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/shoe"

                    android:fontFamily="@font/poppins_medium"
                    android:textSize="@dimen/font_size_28"
                    android:textColor="#000"/>
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/myOutlinedButton"
                    android:text="@string/cart"
                    android:paddingTop="@dimen/dim_8"
                    android:paddingBottom="@dimen/dim_8"
                    android:paddingStart="@dimen/dim_14"
                    android:paddingEnd="@dimen/dim_14"
                    android:textColor="#000"
                    android:fontFamily="@font/poppins_medium"

                    android:textSize="@dimen/font_size_18"
                    android:layout_gravity="end"/>
            </LinearLayout>
            <TextView
                android:id="@+id/itemDescriptionTVVI"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sportsShoe"
                android:fontFamily="@font/poppins_medium"
                android:textSize="@dimen/font_size_16"
                android:textColor="#000"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/dim_16">
                <TextView
                    android:id="@+id/priceTVVI"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/rs_400_00"
                    android:layout_gravity="center"
                    android:fontFamily="@font/poppins_medium"
                    android:textSize="@dimen/font_size_22"
                    android:textColor="#000"/>
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/myOutlinedButton"
                    android:text="@string/buyNow"
                    android:paddingTop="@dimen/dim_8"
                    android:paddingBottom="@dimen/dim_8"
                    android:paddingStart="@dimen/dim_14"
                    android:paddingEnd="@dimen/dim_14"
                    android:textColor="#000"
                    android:fontFamily="@font/poppins_medium"

                    android:textSize="@dimen/font_size_18"
                    android:layout_gravity="end"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/listItemQtyLL"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="start">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/Qty"
                    android:textColor="#000"
                    android:textSize="@dimen/font_size_22" />

                <TextView
                    android:id="@+id/decrementItemQty"
                    android:layout_width="@dimen/dim_30"
                    android:layout_height="@dimen/dim_30"

                    android:background="?selectableItemBackground"
                    android:fontFamily="@font/poppins_medium"
                    android:gravity="center"
                    android:text="@string/neg"
                    android:textColor="#000"

                    android:textSize="@dimen/font_size_24" />

                <TextView
                    android:id="@+id/noOfItemTVVI"
                    android:layout_width="@dimen/dim_30"
                    android:layout_height="@dimen/dim_30"
                    android:background="?selectableItemBackground"
                    android:fontFamily="@font/poppins_medium"
                    android:gravity="center"
                    android:text="@string/zero"
                    android:textColor="#000"

                    android:textSize="@dimen/font_size_24" />

                <TextView
                    android:id="@+id/incrementItemQty"
                    android:layout_width="@dimen/dim_30"
                    android:layout_height="@dimen/dim_30"
                    android:background="?selectableItemBackground"
                    android:fontFamily="@font/poppins_medium"
                    android:gravity="center"
                    android:text="@string/pos"
                    android:textColor="#000"

                    android:textSize="@dimen/font_size_24" />


            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>