<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.LogIn"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/dim_30"
        android:background="#EEEEEE">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dim_25"
            android:layout_marginTop="@dimen/dim_33"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/welcome"
            android:textColor="#000"
            android:textSize="@dimen/font_size_32"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dim_250"
            android:layout_marginTop="@dimen/dim_110"
            app:lottie_rawRes="@raw/online_shopping_delivery"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dim_10"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" >
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dim_60"
                android:layout_marginStart="@dimen/dim_38"
                android:layout_marginTop="@dimen/dim_2"
                android:layout_marginEnd="@dimen/dim_38"
                android:hint="@string/email"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/emailTIETLI"
                    android:inputType="textEmailAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dim_60"
                android:layout_marginStart="@dimen/dim_38"
                android:layout_marginTop="@dimen/dim_8"
                android:layout_marginEnd="@dimen/dim_38"
                android:hint="@string/password"

                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/passwordTIETLI"
                    android:inputType="textPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"


                android:layout_marginTop="4dp"
                android:layout_marginEnd="@dimen/dim_38"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/forgotPassword"
                android:textColor="#F34E4A4A"
                android:textSize="12sp"
                android:textStyle="bold"
                android:layout_gravity="end"
                 />

            <Button
                android:id="@+id/btnLogInFragment"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dim_60"
                android:layout_marginStart="@dimen/dim_38"
                android:layout_marginTop="@dimen/dim_28"
                android:layout_marginEnd="@dimen/dim_38"
                android:padding="0dp"

                android:backgroundTint="#F34E4A4A"
                android:textColor="#fff"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/login"
                android:textSize="@dimen/font_size_18" />


        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dim_625"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/orConnectVia"
            android:textColor="#858484"
            android:textSize="@dimen/font_size_16"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <Button
            android:id="@+id/button"
            android:layout_width="@dimen/dim_140"
            android:layout_height="@dimen/dim_60"
            android:layout_gravity="start"
            android:backgroundTint="#F34E4A4A"
            android:drawablePadding="8dp"
            android:text="@string/google"
            android:textSize="@dimen/font_size_13"
            android:layout_marginTop="@dimen/dim_680"
            android:layout_marginStart="@dimen/dim_38"
            app:icon="@drawable/google"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button2"
            android:layout_width="@dimen/dim_140"
            android:layout_height="@dimen/dim_60"
            android:layout_gravity="end"
            android:backgroundTint="#F34E4A4A"
            android:drawablePadding="8dp"
            android:text="@string/facebook"
            android:textSize="@dimen/font_size_13"
            app:icon="@drawable/facebook"
            android:layout_marginTop="@dimen/dim_680"
            android:layout_marginEnd="@dimen/dim_38"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/don_t_have_acc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dim_38"
            android:layout_marginTop="@dimen/dim_770"
            android:layout_marginEnd="@dimen/dim_38"
            android:background="?selectableItemBackground"
            android:fontFamily="@font/poppins_medium"

            android:gravity="center"
            android:text="@string/don_t_have_"
            android:textSize="@dimen/font_size_16"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />




    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>